odf instance and nodeselect for odf

--- a/components/odf-operator/instance/base/kustomization.yaml
+++ b/components/odf-operator/instance/base/kustomization.yaml
@@ -1,4 +1,8 @@
+
+namespace: openshift-storage
+
 resources:
 #- storage-cluster.yaml
+- ocs-external-cluster-details-secret.yaml
 - storage-system.yaml
 #- noobaa-default-backing-store.yaml
