--- a/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
+++ b/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
@@ -22,17 +22,4 @@ patches:
     target:
       kind: Subscription
       name: odf-operator
-  #- patch: |-
-  #    - op: replace
-  #      path: /spec/version
-  #      value: 4.15.19-rhodf
-  #  target:
-  #    kind: Subscription
-  #    name: odf-operator
-  #- patch: |-
-  #    - op: replace
-  #      path: /spec
-  #      value: {}
-  #  target:
-  #    kind: OperatorGroup
-  #    name: openshift-storage
+  - path: patch-namespace-annotation.yaml
