--- a/components/odf-operator/instance/base/kustomization.yaml
+++ b/components/odf-operator/instance/base/kustomization.yaml
@@ -2,7 +2,7 @@
 namespace: openshift-storage
 
 resources:
-#- storage-cluster.yaml
 - ocs-external-cluster-details-secret.yaml
+- storage-cluster.yaml
 - storage-system.yaml
 #- noobaa-default-backing-store.yaml
