--- a/components/rhsso-operator/namespace.yaml
+++ b/components/rhsso-operator/namespace.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
+    openshift.io/node-selector: "controller=false"
     openshift.io/description: "SSO project"
     openshift.io/display-name: "Red Hat SSO"
     argocd.argoproj.io/sync-options: Delete=false
