disabled valut-config-operator 1

--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -244,6 +244,7 @@ applications:
           kind: StatefulSet
   
   vault-config-operator:
+    enabled: false
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '32'
