--- a/components/rhsso-configuration/rbac.yaml
+++ b/components/rhsso-configuration/rbac.yaml
@@ -1,3 +1,9 @@
+---
+kind: Group
+apiVersion: user.openshift.io/v1
+metadata:
+  name: admin
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
