--- a/components/rhsso-configuration/rbac.yaml
+++ b/components/rhsso-configuration/rbac.yaml
@@ -18,3 +18,6 @@ subjects:
   - apiGroup: rbac.authorization.k8s.io
     kind: Group
     name: admin 
+  - apiGroup: rbac.authorization.k8s.io
+    kind: Group
+    name: cluster-admins 
