--- a/components/kube-descheduler-operator/kustomization.yaml
+++ b/components/kube-descheduler-operator/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 
 namespace: openshift-kube-descheduler-operator
 
-bases:
+resources:
 - https://github.com/redhat-cop/gitops-catalog/tree/main/kube-descheduler-operator/operator/overlays/stable
