--- a/components/kube-descheduler-operator/instance/KubeDescheduler.yaml
+++ b/components/kube-descheduler-operator/instance/KubeDescheduler.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-kube-descheduler-operator
 spec:
   logLevel: Normal
-  mode: Predictive
+  mode: Automatic
   operatorLogLevel: Normal
   profiles:
     - LifecycleAndUtilization
