enable autosizing for perf node

--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -17,7 +17,7 @@ default:
 applications:
 
   node-config:
-    enabled: false
+    enabled: true
     annotations:
       argocd.argoproj.io/sync-wave: '0'
     source:
