--- a/clusters/overlays/local.hub/components/virtualization-instance/HyperConverged.yaml
+++ b/clusters/overlays/local.hub/components/virtualization-instance/HyperConverged.yaml
@@ -3,4 +3,51 @@ kind: HyperConverged
 metadata:
   name: kubevirt-hyperconverged
   namespace: openshift-cnv
-spec: {}
+spec: 
+  virtualMachineOptions:
+    disableFreePageReporting: false
+    disableSerialConsoleLog: true
+  liveMigrationConfig:
+    allowAutoConverge: false
+    allowPostCopy: false
+    completionTimeoutPerGiB: 800
+    parallelMigrationsPerCluster: 5
+    parallelOutboundMigrationsPerNode: 2
+    progressTimeout: 150
+  certConfig:
+    ca:
+      duration: 48h0m0s
+      renewBefore: 24h0m0s
+    server:
+      duration: 24h0m0s
+      renewBefore: 12h0m0s
+  infra:
+    nodePlacement:
+      nodeSelector:
+        controller: 'false'
+  applicationAwareConfig:
+    allowApplicationAwareClusterResourceQuota: false
+    vmiCalcConfigName: DedicatedVirtualResources
+  evictionStrategy: None
+  featureGates:
+    deployTektonTaskResources: false
+    enableCommonBootImageImport: true
+    withHostPassthroughCPU: false
+    disableMDevConfiguration: false
+    enableApplicationAwareQuota: false
+    deployKubeSecondaryDNS: false
+    nonRoot: true
+    alignCPUs: false
+    enableManagedTenantQuota: false
+    deployVmConsoleProxy: false
+    persistentReservation: false
+    autoResourceLimits: false
+  workloadUpdateStrategy:
+    batchEvictionInterval: 1m0s
+    batchEvictionSize: 10
+    workloadUpdateMethods:
+      - LiveMigrate
+  uninstallStrategy: BlockUninstallIfWorkloadsExist
+  workloads: {}
+  resourceRequirements:
+    vmiCPUAllocationRatio: 10
