--- a/components/kube-descheduler-operator/instance/KubeDescheduler.yaml
+++ b/components/kube-descheduler-operator/instance/KubeDescheduler.yaml
@@ -8,6 +8,7 @@ spec:
   mode: Automatic
   operatorLogLevel: Normal
   profileCustomizations:
+    devEnableEvictionsInBackground: true
     devLowNodeUtilizationThresholds: Medium
   profiles:
     - LifecycleAndUtilization
