--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -231,7 +231,7 @@ applications:
   authentication-sso-operator:
     enabled: true
     annotations:
-      argocd.argoproj.io/sync-wave: '31'
+      argocd.argoproj.io/sync-wave: '3'
     destination:
       namespace: openshift-config
     source:
@@ -241,7 +241,7 @@ applications:
   authentication-sso-configuration:
     enabled: true
     annotations:
-      argocd.argoproj.io/sync-wave: '32'
+      argocd.argoproj.io/sync-wave: '3'
     destination:
       namespace: openshift-config
     source:
@@ -249,6 +249,7 @@ applications:
 
   
   authentication-sso-oauth:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '33'
     destination:
