--- a/components/oauth/overlays/htpass/kustomization.yaml
+++ b/components/oauth/overlays/htpass/kustomization.yaml
@@ -2,11 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 resources:
-  #- ../../base
+  - ../../base
   - htpass-secret.yaml
 
-#components:
-#- ../sso
+components:
+- ../sso
 
 patches:
   - patch: |-
