--- a/components/rhsso-configuration/kustomization.yaml
+++ b/components/rhsso-configuration/kustomization.yaml
@@ -8,9 +8,9 @@ resources:
   - keycloak-realm.yaml
   - link.yaml
   - users.yaml
-  #- groups.yaml # bugs the groups need to be created manually
+  - groups.yaml # bugs the groups need to be created manually
   #- oauth-secret-policy.yaml
-  #- rbac.yaml
+  - rbac.yaml
 
 patches:
 
