--- a/components/rhsso-configuration/rbac.yaml
+++ b/components/rhsso-configuration/rbac.yaml
@@ -1,15 +1,8 @@
 ---
-kind: Group
-apiVersion: user.openshift.io/v1
-metadata:
-  name: admin
-users:
-  - admin
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: cluster-admin-users
+  name: cluster-admin-users-sso
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -17,7 +10,4 @@ roleRef:
 subjects:
   - apiGroup: rbac.authorization.k8s.io
     kind: Group
-    name: admin 
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: cluster-admins 
+    name: cluster-admins-sso 
