--- a/components/rhsso-configuration/rbac.yaml
+++ b/components/rhsso-configuration/rbac.yaml
@@ -8,6 +8,6 @@ roleRef:
   kind: ClusterRole
   name: cluster-admin
 subjects:
-  - apiGroup: user.openshift.io/v1
+  - apiGroup: rbac.authorization.k8s.io
     kind: Group
     name: cluster-admins-sso 
